--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.12.2",
